<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:gravity="center"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  xmlns:tools="http://schemas.android.com/tools"
  tools:context="mars.clocki.interfaces.HomeActivity"
	tools:ignore="MergeRootFrame"
  >
<TableLayout
  android:gravity="center"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	>

<TableRow
  android:gravity="center"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	>
  <TextView
    android:id="@+id/welcome_label_id"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/welcome_to_clocki_game"
    android:textSize="@dimen/font_medium"
    android:lineSpacingExtra="20dp"
    />
</TableRow>

<TableRow
  android:gravity="center"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  >
  <Button
    android:id="@+id/level1_btn"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/i_only_18_steps"
    android:onClick="startLevel1"
    />
</TableRow>

<TableRow
  android:gravity="center"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  >
  <Button
    android:id="@+id/level2_btn"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/ii_daisy"
    android:onClick="startLevel2"
    />
</TableRow>

</TableLayout>
</ScrollView>